<resources>
    <string name="app_name">Rentler</string>
    <string name="no_internet_connection">Please check your Internet Connection and Try again.</string>
    <string name="user_list_error">Failed to load data. Refresh to try again</string>
    <string name="loading">Loading</string>
    <string name="not_applicable">NA</string>
    <string name="title_activity_rentler_dashboard">Rentler</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_vehicles">Vehicles</string>
    <string name="title_assignment">Assignment</string>
    <string name="title_profile">Profile</string>

    <!-- Vehicle detail-->
    <string name="vehicle_title">Your Vehicles</string>
    <string name="vehicle_name">Owner Name</string>
    <string name="vehicle_model">Vehicle Model *</string>
    <string name="vehicle_number">Vehicle Number *</string>
    <string name="button_save_vehicle">Save Vehicle</string>
    <!-- Vehicle detail-->

    <!-- Assignment Detail  -->
    <string name="assignment_list_title">Assignments</string>
    <string name="assignment_detail">Assignment Detail</string>
    <string name="contractor_name">Contractor Name *</string>
    <string name="hour">Hour *</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="location">Location</string>
    <string name="diesel_in_liter">Diesel In Liter *</string>
    <string name="payment_term">Payment Term</string>
    <string name="payment_amount">Payment</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="per_hour_amount">Per Hour Rs.</string>
    <string name="remaining_payment_amount">Remaining Payment Amount</string>
    <string name="button_save_assignment">Save Assignment</string>

    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <!-- Assignment Detail  -->

    <string-array name="payment_terms_list">
        <item>"Unpaid"</item>
        <item>"Cash"</item>
        <item>"Check"</item>
        <item>"Partially paid"</item>
    </string-array>
</resources>