<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="vehicle"
            type="com.sushant.sampledemomvvmapicall.views.vehicaldetail.Vehicle" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_20"
            tools:context=".views.vehicaldetail.VehicleDetailActivity">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_10"
                android:elevation="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_10"
                app:cardPreventCornerOverlap="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardUseCompatPadding="false"
                bind:targetApi="lollipop">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_alignParentTop="true"
                        android:layout_above="@+id/btnSaveVehicle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/vehicleImage"
                            android:layout_width="150dp"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/dp_20"
                            app:shapeAppearanceOverlay="@style/roundedImageView"
                            app:strokeColor="@color/black"
                            app:strokeWidth="1dp"
                            android:src="@drawable/flower"
                            android:layout_height="150dp"/>

                        <com.sushant.sampledemomvvmapicall.views.customui.CustomTextInputEditText
                            android:id="@+id/vehicleNumber"
                            style="@style/MyCustomTextInputStyle"
                            bind:textValue="@={vehicle.number}"
                            android:hint="@string/vehicle_number" />



                        <com.sushant.sampledemomvvmapicall.views.customui.CustomTextInputEditText
                            android:id="@+id/vehicleModel"
                            style="@style/MyCustomTextInputStyle"
                            bind:textValue="@={vehicle.modelName}"
                            android:hint="@string/vehicle_model" />


                        <com.sushant.sampledemomvvmapicall.views.customui.CustomTextInputEditText
                            android:id="@+id/vehicleName"
                            style="@style/MyCustomTextInputStyle"
                            android:hint="@string/vehicle_name"
                            bind:textValue="@={vehicle.name}" />


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.sushant.sampledemomvvmapicall.views.customui.CustomFullLengthButton
                        android:id="@+id/btnSaveVehicle"
                        android:layout_alignParentBottom="true"
                        style="@style/CustomFullLengthButtonStyle"
                        android:text="@string/button_save_vehicle" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>